--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
         </ul>
     </menu>
     <div class="banner">
-        <img src="img/pointer.png" class="pointer">
         <img src="img/banner.png" />
     </div>
 
@@ -79,7 +78,7 @@
             <a href="./researchList.html">Learn more</a>
             </div>
             <div class="research_r">
-                <img src="images/home/research.png" alt="">
+                <img src="images/research/img1.png" alt="">
                 <p>Solvation Structure and molecular interactions at Lipid-Water Interfaces Studied Through Vibrational Spectroscopy</p>
             </div>
         </div>
@@ -100,7 +99,7 @@
             </div>
             <ul>
                 <li>
-                    <img src="images/home/news.png" alt="">
+                    <img src="images/news/news.png" alt="">
                     <div class="cont">
                         <h6>Lecture on Elemental Analyzer Tec...</h6>
                         <p>Organic Element Analyzer is mainly used for accurate determination of carbon, hydrogen, nitrogen, sulfur, oxygen and other elements in organic compounds, which can meet the testing requirements of various types of matrix samples and is widely usr …</p>
@@ -111,7 +110,7 @@
                     </div>
                 </li>
                 <li>
-                    <img src="images/home/news.png" alt="">
+                    <img src="images/news/news.png" alt="">
                     <div class="cont">
                         <h6>Lecture on Elemental Analyzer Tec...</h6>
                         <p>Organic Element Analyzer is mainly used for accurate determination of carbon, hydrogen, nitrogen, sulfur, oxygen and other elements in organic compounds, which can meet the testing requirements of various types of matrix samples and is widely usr …</p>
@@ -122,7 +121,7 @@
                     </div>
                 </li>
                 <li>
-                    <img src="images/home/news.png" alt="">
+                    <img src="images/news/news.png" alt="">
                     <div class="cont">
                         <h6>Lecture on Elemental Analyzer Tec...</h6>
                         <p>Organic Element Analyzer is mainly used for accurate determination of carbon, hydrogen, nitrogen, sulfur, oxygen and other elements in organic compounds, which can meet the testing requirements of various types of matrix samples and is widely usr …</p>
@@ -133,7 +132,7 @@
                     </div>
                 </li>
                 <li>
-                    <img src="images/home/news.png" alt="">
+                    <img src="images/news/news.png" alt="">
                     <div class="cont">
                         <h6>Lecture on Elemental Analyzer Tec...</h6>
                         <p>Organic Element Analyzer is mainly used for accurate determination of carbon, hydrogen, nitrogen, sulfur, oxygen and other elements in organic compounds, which can meet the testing requirements of various types of matrix samples and is widely usr …</p>
