--- a/newsDetail.html
+++ b/newsDetail.html
@@ -50,7 +50,7 @@
         <img src="img/banner.png" />
     </div>
 
-    <div class="research_detail wrap_box">
+    <div class="news_detail wrap_box">
         <div class="breadcrumb">
             <span>NEWS</span>
             <span>></span>
