--- a/teaching.html
+++ b/teaching.html
@@ -51,7 +51,7 @@
         <img src="img/banner.png" />
     </div>
 
-    <div class="publacations wrap_box">
+    <div class="teaching wrap_box">
         <nav>
             <div>Teaching</div>
             <dl>
