--- a/index.html
+++ b/index.html
@@ -47,54 +47,82 @@
         </ul>
     </menu>
     <div class="banner">
+        <img src="img/pointer.png" />
         <img src="img/banner.png" />
     </div>
 
-    <div class="main wrap_box">
-        <div class="welocome">
-            <h3 class="title">Welcome to the You Group at Westlake University!</h3>
-            <div class="welocome_l">
-                <div class="img_box">
-                    <img src="images/home/img1.png" alt="">
-                    <img src="images/home/bar.png" alt="">
+    <div class="main">
+        <div class="welcome">
+            <div class="wrap_box">
+                <h3 class="title">Welcome to the You Group at Westlake University!</h3>
+                <div class="content_box">
+                    <div class="content_l">
+                        <div class="img_box">
+                            <img src="images/home/img1.png" alt="">
+                            <img src="images/home/bar.png" alt="">
+                        </div>
+                        <div class="cont">
+                            <img class="line" src="images/home/line.png" alt="">
+                            <h6>Our Mission</h6>
+                            <p>At the You Group, our mission is to advance our understanding of molecular behavior
+                                through cutting-edge optical characterization techniques and rigorous theoretical
+                                computations. Situated at the crossroads of Physical Chemistry and Molecular Biophysics.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="content_r">
+                        <img class="quotation_mark_l" src="images/home/quotation_mark_l.png" alt="">
+                        <p>Resonance, the epitome of elegance. Just as light resonates, so do our hearts converge at
+                            Westlake University, where We find beauty in the resonance among people.</p>
+                        <img class="quotation_mark_r" src="images/home/quotation_mark_r.png" alt="">
+                        <img src="images/home/img2.png" alt="">
+                    </div>
                 </div>
-                <div class="cont">
-                    <img src="images/home/line.png" alt="">
-                    <h6>Our Mission</h6>
-                    <p>At the You Group, our mission is to advance our understanding of molecular behavior through cutting-edge optical characterization techniques and rigorous theoretical computations. Situated at the crossroads of Physical Chemistry and Molecular Biophysics.</p>
-                </div>
-            </div>
-            <div class="welocome_r">
-                <img src="images/home/quotation_mark_l.png" alt="">
-                <p>Resonance, the epitome of elegance. Just as light resonates, so do our hearts converge at Westlake University, where We find beauty in the resonance among people.</p>
-                <img src="images/home/quotation_mark_r.png" alt="">
-                <img src="images/home/img2.png" alt="">
             </div>
         </div>
+
         <div class="research">
-            <div class="research_l">
-            <h3 class="title">Research Focuses</h3>
-            <p>Our focus is on unraveling the mysteries of surface/interface phenomena and the dynamic structures of liquids.</p>
-            <a href="./researchList.html">Learn more</a>
-            </div>
-            <div class="research_r">
-                <img src="images/research/img1.png" alt="">
-                <p>Solvation Structure and molecular interactions at Lipid-Water Interfaces Studied Through Vibrational Spectroscopy</p>
+            <div class="wrap_box">
+                <div class="research_l">
+                    <h3 class="title">Research Focuses</h3>
+                    <p>Our focus is on unraveling the mysteries of surface/interface phenomena and the dynamic
+                        structures of
+                        liquids.</p>
+                    <a href="./researchList.html">Learn more</a>
+                </div>
+                <div class="research_r">
+                    <img src="images/research/img1.png" alt="">
+                    <p>Solvation Structure and molecular interactions at Lipid-Water Interfaces Studied Through
+                        Vibrational
+                        Spectroscopy</p>
+                </div>
             </div>
         </div>
         <div class="contact_us">
-            <h3 class="title">Join Us on Our Scientific Journey:</h3>
-            <p>Our research group is driven by a passion for discovery and a commitment to pushing the boundaries of knowledge. We invite you to embark on a scientific voyage with us as we unravel the intricate mysteries of biomolecules and push the frontiers of Physical Chemistry and Biophysics.</p>
-            <p>We have open positions for postdoctoral researchers, and research assistants.Our laboratory is devoted to nurturing the next generation of scientists, fostering innovation, and providing a supportive research environment. For detailed information about these opportunities, please visit our 「Website Link].</p>
-            <div>
-                <p>If you have any inquiries or are interested in collaborating with us,don't hesitate to reach out:</p>
-                <a href="./openings.html">Contact Us</a>
+            <div class="wrap_box">
+                <h3 class="title">Join Us on Our Scientific Journey:</h3>
+                <p>Our research group is driven by a passion for discovery and a commitment to pushing the boundaries of
+                    knowledge. We invite you to embark on a scientific voyage with us as we unravel the intricate
+                    mysteries
+                    of biomolecules and push the frontiers of Physical Chemistry and Biophysics.</p>
+                <p>We have open positions for postdoctoral researchers, and research assistants.Our laboratory is
+                    devoted to
+                    nurturing the next generation of scientists, fostering innovation, and providing a supportive
+                    research
+                    environment. For detailed information about these opportunities, please visit our 「Website Link].
+                </p>
+                <div class="modal">
+                    <p>If you have any inquiries or are interested in collaborating with us,don't hesitate to reach out:
+                    </p>
+                    <a href="./openings.html">Contact Us</a>
+                </div>
             </div>
         </div>
         <div class="news">
             <h3 class="title">The news we publish will show you</h3>
             <div>
-                <p>Our lab team prides itself on excellence in the field of optics, and our academic achievements represent our commitment to science and our pursuit of excellence.</p>
+                <p>Our lab team prides itself on excellence in the field of optics, and our academic achievements
+                    represent our commitment to science and our pursuit of excellence.</p>
                 <a href="./newsList.html">Find more</a>
             </div>
             <ul>
@@ -102,7 +130,9 @@
                     <img src="images/news/news.png" alt="">
                     <div class="cont">
                         <h6>Lecture on Elemental Analyzer Tec...</h6>
-                        <p>Organic Element Analyzer is mainly used for accurate determination of carbon, hydrogen, nitrogen, sulfur, oxygen and other elements in organic compounds, which can meet the testing requirements of various types of matrix samples and is widely usr …</p>
+                        <p>Organic Element Analyzer is mainly used for accurate determination of carbon, hydrogen,
+                            nitrogen, sulfur, oxygen and other elements in organic compounds, which can meet the testing
+                            requirements of various types of matrix samples and is widely usr …</p>
                     </div>
                     <div class="date">
                         <span>14</span><br>
@@ -113,7 +143,9 @@
                     <img src="images/news/news.png" alt="">
                     <div class="cont">
                         <h6>Lecture on Elemental Analyzer Tec...</h6>
-                        <p>Organic Element Analyzer is mainly used for accurate determination of carbon, hydrogen, nitrogen, sulfur, oxygen and other elements in organic compounds, which can meet the testing requirements of various types of matrix samples and is widely usr …</p>
+                        <p>Organic Element Analyzer is mainly used for accurate determination of carbon, hydrogen,
+                            nitrogen, sulfur, oxygen and other elements in organic compounds, which can meet the testing
+                            requirements of various types of matrix samples and is widely usr …</p>
                     </div>
                     <div class="date">
                         <span>14</span><br>
@@ -124,7 +156,9 @@
                     <img src="images/news/news.png" alt="">
                     <div class="cont">
                         <h6>Lecture on Elemental Analyzer Tec...</h6>
-                        <p>Organic Element Analyzer is mainly used for accurate determination of carbon, hydrogen, nitrogen, sulfur, oxygen and other elements in organic compounds, which can meet the testing requirements of various types of matrix samples and is widely usr …</p>
+                        <p>Organic Element Analyzer is mainly used for accurate determination of carbon, hydrogen,
+                            nitrogen, sulfur, oxygen and other elements in organic compounds, which can meet the testing
+                            requirements of various types of matrix samples and is widely usr …</p>
                     </div>
                     <div class="date">
                         <span>14</span><br>
@@ -135,7 +169,9 @@
                     <img src="images/news/news.png" alt="">
                     <div class="cont">
                         <h6>Lecture on Elemental Analyzer Tec...</h6>
-                        <p>Organic Element Analyzer is mainly used for accurate determination of carbon, hydrogen, nitrogen, sulfur, oxygen and other elements in organic compounds, which can meet the testing requirements of various types of matrix samples and is widely usr …</p>
+                        <p>Organic Element Analyzer is mainly used for accurate determination of carbon, hydrogen,
+                            nitrogen, sulfur, oxygen and other elements in organic compounds, which can meet the testing
+                            requirements of various types of matrix samples and is widely usr …</p>
                     </div>
                     <div class="date">
                         <span>14</span><br>
