--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
 <body>
     <header>
-        <div class="wrap_box">
-            <div class="h-left">
+        <div class="wrap_box flex">
+            <div class="h-left flex">
                 <a class="university" href="https://github.com/hugeRecycle/YouLab">
                     <img id="logo" class="logo" src="img/logo.png" title="西湖大学" />
                 </a>
@@ -26,7 +26,7 @@
             <div class="h-center">
                 <h2>Multidimentional nanospectroscopy laboratory </h2>
             </div>
-            <div class="h-right">
+            <div class="h-right flex">
                 <img src="img/group.png" alt="">
                 <div class="btn_box">
                     <img src="img/earth_icon.png" alt="">
@@ -36,7 +36,7 @@
         </div>
     </header>
     <menu>
-        <ul class="menu wrap_box">
+        <ul class="menu wrap_box flex">
             <li class="active left"><a href="index.html">HOME</a></li>
             <li><a href="publications.html">PUBLICATIONS</a></li>
             <li class="right"><a href="researchList.html">RESEARCH</a></li>
@@ -55,7 +55,7 @@
         <div class="welcome">
             <div class="wrap_box">
                 <h3 class="title">Welcome to the You Group at Westlake University!</h3>
-                <div class="content_box">
+                <div class="content_box flex">
                     <div class="content_l">
                         <div class="img_box">
                             <img src="images/home/img1.png" alt="">
@@ -119,66 +119,72 @@
             </div>
         </div>
         <div class="news">
-            <h3 class="title">The news we publish will show you</h3>
-            <div>
-                <p>Our lab team prides itself on excellence in the field of optics, and our academic achievements
-                    represent our commitment to science and our pursuit of excellence.</p>
-                <a href="./newsList.html">Find more</a>
+            <div class="wrap_box">
+                <h3 class="title">The news we publish will show you</h3>
+                <div class="instr flex">
+                    <p>Our lab team prides itself on excellence in the field of optics, and our academic achievements
+                        represent our commitment to science and our pursuit of excellence.</p>
+                    <a href="./newsList.html">Find more</a>
+                </div>
+                <ul>
+                    <li class="flex">
+                        <img src="images/news/news.png" alt="">
+                        <div class="cont">
+                            <h6>Lecture on Elemental Analyzer Tec...</h6>
+                            <p>Organic Element Analyzer is mainly used for accurate determination of carbon, hydrogen,
+                                nitrogen, sulfur, oxygen and other elements in organic compounds, which can meet the
+                                testing
+                                requirements of various types of matrix samples and is widely usr …</p>
+                        </div>
+                        <div class="date">
+                            <span>14</span>
+                            <span>2023-09</span>
+                        </div>
+                    </li>
+                    <li class="flex">
+                        <img src="images/news/news.png" alt="">
+                        <div class="cont">
+                            <h6>Lecture on Elemental Analyzer Tec...</h6>
+                            <p>Organic Element Analyzer is mainly used for accurate determination of carbon, hydrogen,
+                                nitrogen, sulfur, oxygen and other elements in organic compounds, which can meet the
+                                testing
+                                requirements of various types of matrix samples and is widely usr …</p>
+                        </div>
+                        <div class="date">
+                            <span>14</span>
+                            <span>2023-09</span>
+                        </div>
+                    </li>
+                    <li class="flex">
+                        <img src="images/news/news.png" alt="">
+                        <div class="cont">
+                            <h6>Lecture on Elemental Analyzer Tec...</h6>
+                            <p>Organic Element Analyzer is mainly used for accurate determination of carbon, hydrogen,
+                                nitrogen, sulfur, oxygen and other elements in organic compounds, which can meet the
+                                testing
+                                requirements of various types of matrix samples and is widely usr …</p>
+                        </div>
+                        <div class="date">
+                            <span>14</span>
+                            <span>2023-09</span>
+                        </div>
+                    </li>
+                    <li class="flex">
+                        <img src="images/news/news.png" alt="">
+                        <div class="cont">
+                            <h6>Lecture on Elemental Analyzer Tec...</h6>
+                            <p>Organic Element Analyzer is mainly used for accurate determination of carbon, hydrogen,
+                                nitrogen, sulfur, oxygen and other elements in organic compounds, which can meet the
+                                testing
+                                requirements of various types of matrix samples and is widely usr …</p>
+                        </div>
+                        <div class="date">
+                            <span>14</span>
+                            <span>2023-09</span>
+                        </div>
+                    </li>
+                </ul>
             </div>
-            <ul>
-                <li>
-                    <img src="images/news/news.png" alt="">
-                    <div class="cont">
-                        <h6>Lecture on Elemental Analyzer Tec...</h6>
-                        <p>Organic Element Analyzer is mainly used for accurate determination of carbon, hydrogen,
-                            nitrogen, sulfur, oxygen and other elements in organic compounds, which can meet the testing
-                            requirements of various types of matrix samples and is widely usr …</p>
-                    </div>
-                    <div class="date">
-                        <span>14</span><br>
-                        <span>2023-09</span>
-                    </div>
-                </li>
-                <li>
-                    <img src="images/news/news.png" alt="">
-                    <div class="cont">
-                        <h6>Lecture on Elemental Analyzer Tec...</h6>
-                        <p>Organic Element Analyzer is mainly used for accurate determination of carbon, hydrogen,
-                            nitrogen, sulfur, oxygen and other elements in organic compounds, which can meet the testing
-                            requirements of various types of matrix samples and is widely usr …</p>
-                    </div>
-                    <div class="date">
-                        <span>14</span><br>
-                        <span>2023-09</span>
-                    </div>
-                </li>
-                <li>
-                    <img src="images/news/news.png" alt="">
-                    <div class="cont">
-                        <h6>Lecture on Elemental Analyzer Tec...</h6>
-                        <p>Organic Element Analyzer is mainly used for accurate determination of carbon, hydrogen,
-                            nitrogen, sulfur, oxygen and other elements in organic compounds, which can meet the testing
-                            requirements of various types of matrix samples and is widely usr …</p>
-                    </div>
-                    <div class="date">
-                        <span>14</span><br>
-                        <span>2023-09</span>
-                    </div>
-                </li>
-                <li>
-                    <img src="images/news/news.png" alt="">
-                    <div class="cont">
-                        <h6>Lecture on Elemental Analyzer Tec...</h6>
-                        <p>Organic Element Analyzer is mainly used for accurate determination of carbon, hydrogen,
-                            nitrogen, sulfur, oxygen and other elements in organic compounds, which can meet the testing
-                            requirements of various types of matrix samples and is widely usr …</p>
-                    </div>
-                    <div class="date">
-                        <span>14</span><br>
-                        <span>2023-09</span>
-                    </div>
-                </li>
-            </ul>
         </div>
     </div>
 
@@ -187,7 +193,7 @@
         <div class="f_top">
             <a href="./openings.html">CONTACT US <img src="./img/left.png" alt=""></a>
         </div>
-        <div class="f_bottom wrap_box">
+        <div class="f_bottom wrap_box flex">
             <div class="f_b_left">
                 <div class="f_logo_box">
                     <img class='bg' src="img/f_logo.png" />
