--- a/publications.html
+++ b/publications.html
@@ -12,8 +12,8 @@
 
 <body>
     <header>
-        <div class="wrap_box">
-            <div class="h-left">
+        <div class="wrap_box flex">
+            <div class="h-left flex">
                 <a class="university" href="https://github.com/hugeRecycle/YouLab">
                     <img id="logo" class="logo" src="img/logo.png" title="西湖大学" />
                 </a>
@@ -23,7 +23,7 @@
                     ENGINEERING
                 </a>
             </div>
-            <div class="h-center">
+            <div class="h-center flex">
                 <h2>Multidimentional nanospectroscopy laboratory </h2>
             </div>
             <div class="h-right">
@@ -36,7 +36,7 @@
         </div>
     </header>
     <menu>
-        <ul class="menu wrap_box">
+        <ul class="menu wrap_box flex">
             <li class="active left"><a href="index.html">HOME</a></li>
             <li><a href="publications.html">PUBLICATIONS</a></li>
             <li class="right"><a href="researchList.html">RESEARCH</a></li>
@@ -121,7 +121,7 @@
         <div class="f_top">
             <a href="./openings.html">CONTACT US <img src="./img/left.png" alt=""></a>
         </div>
-        <div class="f_bottom wrap_box">
+        <div class="f_bottom wrap_box flex">
             <div class="f_b_left">
                 <div class="f_logo_box">
                     <img class='bg' src="img/f_logo.png" />
