--- a/teaching.html
+++ b/teaching.html
@@ -12,9 +12,9 @@
 
 <body>
     <header>
-        <div class="wrap_box">
+        <div class="wrap_box flex">
             <div class="h-left">
-                <a class="university" href="https://github.com/hugeRecycle/YouLab">
+                <a class="university flex" href="https://github.com/hugeRecycle/YouLab">
                     <img id="logo" class="logo" src="img/logo.png" title="西湖大学" />
                 </a>
                 <a class="school" href="https://www.baidu.com/">
@@ -26,7 +26,7 @@
             <div class="h-center">
                 <h2>Multidimentional nanospectroscopy laboratory </h2>
             </div>
-            <div class="h-right">
+            <div class="h-right flex">
                 <img src="img/group.png" alt="">
                 <div class="btn_box">
                     <img src="img/earth_icon.png" alt="">
@@ -36,7 +36,7 @@
         </div>
     </header>
     <menu>
-        <ul class="menu wrap_box">
+        <ul class="menu wrap_box flex">
             <li class="active left"><a href="index.html">HOME</a></li>
             <li><a href="publications.html">PUBLICATIONS</a></li>
             <li class="right"><a href="researchList.html">RESEARCH</a></li>
@@ -132,7 +132,7 @@
         <div class="f_top">
             <a href="./openings.html">CONTACT US <img src="./img/left.png" alt=""></a>
         </div>
-        <div class="f_bottom wrap_box">
+        <div class="f_bottom wrap_box flex">
             <div class="f_b_left">
                 <div class="f_logo_box">
                     <img class='bg' src="img/f_logo.png" />
