--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 </div>
             </div>
         </div>
-        <div class="news">
+        <div class="newsList">
             <div class="wrap_box">
                 <h3 class="title">The news we publish will show you</h3>
                 <div class="instr flex">
