--- a/newsList.html
+++ b/newsList.html
@@ -50,84 +50,68 @@
         <img src="img/banner.png" />
     </div>
 
-
-    <ul class="news_list wrap_box">
-        <li>
-            <div>
-                <img src="images/news/news.png" alt="">
-            </div>
-            <div>
-                <p>Lecture on Elemental Analyzer Tec...</p>
-                <p>Organic Element Analyzer is mainly used for accurate determination of carbon, hydrogen, nitrogen,
-                    sulfur, oxygen and other elements in organic compounds, which can meet the testing requirements
-                    of various types of matrix samples and is widely usr …</p>
-            </div>
-            <div>
-                <span>14</span><br>
-                <span>2023-09</span>
-            </div>
-        </li>
-        <li>
-            <div>
-                <img src="images/news/news.png" alt="">
-            </div>
-            <div>
-                <p>Lecture on Elemental Analyzer Tec...</p>
-                <p>Organic Element Analyzer is mainly used for accurate determination of carbon, hydrogen, nitrogen,
-                    sulfur, oxygen and other elements in organic compounds, which can meet the testing requirements
-                    of various types of matrix samples and is widely usr …</p>
-            </div>
-            <div>
-                <span>14</span><br>
-                <span>2023-09</span>
-            </div>
-        </li>
-        <li>
-            <div>
-                <img src="images/news/news.png" alt="">
-            </div>
-            <div>
-                <p>Lecture on Elemental Analyzer Tec...</p>
-                <p>Organic Element Analyzer is mainly used for accurate determination of carbon, hydrogen, nitrogen,
-                    sulfur, oxygen and other elements in organic compounds, which can meet the testing requirements
-                    of various types of matrix samples and is widely usr …</p>
-            </div>
-            <div>
-                <span>14</span><br>
-                <span>2023-09</span>
-            </div>
-        </li>
-        <li>
-            <div>
-                <img src="images/news/news.png" alt="">
-            </div>
-            <div>
-                <p>Lecture on Elemental Analyzer Tec...</p>
-                <p>Organic Element Analyzer is mainly used for accurate determination of carbon, hydrogen, nitrogen,
-                    sulfur, oxygen and other elements in organic compounds, which can meet the testing requirements
-                    of various types of matrix samples and is widely usr …</p>
-            </div>
-            <div>
-                <span>14</span><br>
-                <span>2023-09</span>
-            </div>
-        </li>
-        <li>
-            <div>
-                <img src="images/news/news.png" alt="">
-            </div>
-            <div>
-                <p>Lecture on Elemental Analyzer Tec...</p>
-                <p>Organic Element Analyzer is mainly used for accurate determination of carbon, hydrogen, nitrogen,
-                    sulfur, oxygen and other elements in organic compounds, which can meet the testing requirements
-                    of various types of matrix samples and is widely usr …</p>
-            </div>
-            <div>
-                <span>14</span><br>
-                <span>2023-09</span>
-            </div>
-        </li>
-    </ul>
+    <div class="newsList main">
+        <div class="wrap_box">
+            <ul>
+                <li class="flex">
+                    <img src="images/news/news.png" alt="">
+                    <div class="cont">
+                        <h6>Lecture on Elemental Analyzer Tec...</h6>
+                        <p>Organic Element Analyzer is mainly used for accurate determination of carbon, hydrogen,
+                            nitrogen, sulfur, oxygen and other elements in organic compounds, which can meet the
+                            testing
+                            requirements of various types of matrix samples and is widely usr …</p>
+                    </div>
+                    <div class="date">
+                        <span>14</span>
+                        <span>2023-09</span>
+                    </div>
+                </li>
+                <li class="flex">
+                    <img src="images/news/news.png" alt="">
+                    <div class="cont">
+                        <h6>Lecture on Elemental Analyzer Tec...</h6>
+                        <p>Organic Element Analyzer is mainly used for accurate determination of carbon, hydrogen,
+                            nitrogen, sulfur, oxygen and other elements in organic compounds, which can meet the
+                            testing
+                            requirements of various types of matrix samples and is widely usr …</p>
+                    </div>
+                    <div class="date">
+                        <span>14</span>
+                        <span>2023-09</span>
+                    </div>
+                </li>
+                <li class="flex">
+                    <img src="images/news/news.png" alt="">
+                    <div class="cont">
+                        <h6>Lecture on Elemental Analyzer Tec...</h6>
+                        <p>Organic Element Analyzer is mainly used for accurate determination of carbon, hydrogen,
+                            nitrogen, sulfur, oxygen and other elements in organic compounds, which can meet the
+                            testing
+                            requirements of various types of matrix samples and is widely usr …</p>
+                    </div>
+                    <div class="date">
+                        <span>14</span>
+                        <span>2023-09</span>
+                    </div>
+                </li>
+                <li class="flex">
+                    <img src="images/news/news.png" alt="">
+                    <div class="cont">
+                        <h6>Lecture on Elemental Analyzer Tec...</h6>
+                        <p>Organic Element Analyzer is mainly used for accurate determination of carbon, hydrogen,
+                            nitrogen, sulfur, oxygen and other elements in organic compounds, which can meet the
+                            testing
+                            requirements of various types of matrix samples and is widely usr …</p>
+                    </div>
+                    <div class="date">
+                        <span>14</span>
+                        <span>2023-09</span>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </div>
 
     <footer>
         <div class="f_top">
