--- a/researchDetail.html
+++ b/researchDetail.html
@@ -47,6 +47,7 @@
         </ul>
     </menu>
     <div class="banner">
+        <img src="img/pointer.png" />
         <img src="img/banner.png" />
     </div>
 
